--- a/src/css/Auth.css
+++ b/src/css/Auth.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     padding: 40px;
-    background: linear-gradient(135deg, #f0f4f8, #e0f7fa);
+    background-color: rgba(25, 65, 66, 0.333);
     border-radius: 15px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     max-width: 90%;
@@ -13,6 +13,15 @@
     animation: fadeIn 0.5s ease-in-out;
     position: relative;
     z-index: 1;
+}
+
+.auth-container, .user-profile-container {
+    background: linear-gradient(135deg, rgba(255, 255, 255,0.4),rgba(255, 255, 255,0.2));
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border-radius: 20px;
+  border: 1px soled rgba(255, 255, 255,0.38);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.47);
 }
 
 @media (max-width: 480px) {
@@ -26,7 +35,7 @@
     font-size: 1.8rem;
     margin-top: 0px;
     margin-bottom: 40px;
-    color: #2c3e50;
+    color: #020406;
 }
 
 .input-group {
@@ -72,7 +81,8 @@ input:focus {
 }
 
 .error {
-    color: #e74c3c;
+    color: #900202;
+    text-shadow: rgb(2, 4, 6);
     margin: 10px 0;
     animation: fadeIn 0.5s ease-in-out;
 }
@@ -92,3 +102,22 @@ input:focus {
     border: 2px solid #3498db; /* Highlight color */
     background-color: #ecf0f1; /* Light background for visibility */
 } 
+
+.input-group .error {
+    border-color: red;
+    box-shadow: 0 0 5px red;
+}
+
+.disabled {
+    background-color: #ccc; /* Grey background */
+    cursor: not-allowed; /* Not-allowed cursor */
+    opacity: 0.6; /* Slightly transparent */
+}
+
+.error-message {
+    color: red; /* Error color */
+    font-size: 0.8rem; /* Smaller font size */
+    margin-left: 5px;
+    margin-top: 5px; /* Space between input and error message */
+    display: block; /* Ensure it takes a new line */
+}
